--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   geolocator: ^14.0.0
   exif: ^3.3.0
   geocoding: ^3.0.0
+  http: ^1.3.0
+  google_maps_flutter: ^2.12.1
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
